trunk/Archive2/14/53c4e545e8a86f/output
main.cpp:22:36: error: default initialization of an object of const type 'const placeholder<0>' requires a user-provided default constructor
    constexpr const placeholder<0> _1;
                                   ^
1 error generated.
